[gd_scene load_steps=15 format=3 uid="uid://capgwdnhn40bm"]

[ext_resource type="Script" path="res://Assets/Script/Controller/UI/Main_Menu/main_menu.gd" id="1_2ju3c"]
[ext_resource type="AudioStream" uid="uid://cp0mdrgknw0x1" path="res://Assets/Music/Start_Buton_Sound/Start_Buton_Sound.mp3" id="2_5ule3"]
[ext_resource type="Texture2D" uid="uid://c5mw58h2ajhr" path="res://Assets/Image/images/Background/Main_Menu/w2BsPEmg.jpeg" id="2_eo3sk"]
[ext_resource type="AudioStream" uid="uid://ty2bg0clrp0t" path="res://Assets/Music/All Button/Quit_Button.mp3" id="3_15ajo"]
[ext_resource type="Texture2D" uid="uid://c4aec0kompmv8" path="res://Assets/Image/Logo/Logo Project Howling Heroes The Great Wolf Rescue.png" id="3_aqiha"]
[ext_resource type="FontFile" uid="uid://daews5bmpatgf" path="res://Assets/Fonts/WolfpackHalloweed-EaGOl.otf" id="4_c4irr"]
[ext_resource type="FontFile" uid="uid://bv6xsykw7vcai" path="res://Assets/Fonts/DisposableDroidBB_bld.ttf" id="5_vrfc0"]
[ext_resource type="AudioStream" uid="uid://bvycrbomgp75i" path="res://Assets/Music/Main_Menu/Night Fullmoon wolf howling tock and roll horor-Mubert.mp3" id="6_h2jsk"]
[ext_resource type="FontFile" uid="uid://ccpiomxr4hnwi" path="res://Assets/Fonts/DisposableDroidBB_bldital.ttf" id="9_b4xqu"]
[ext_resource type="Texture2D" uid="uid://bm28mptpxjf7k" path="res://Assets/Image/images/Buttons/Discord.png" id="10_wohku"]
[ext_resource type="Texture2D" uid="uid://dyvag8ysn7o6g" path="res://Assets/Image/images/Buttons/Github.png" id="11_d0eax"]
[ext_resource type="Texture2D" uid="uid://ydktuoqad1lc" path="res://Assets/Image/images/Buttons/FA.png" id="12_qpg2x"]

[sub_resource type="Theme" id="Theme_oaio5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vasw"]
bg_color = Color(0.145098, 0.262745, 0.341176, 1)
shadow_color = Color(0.862745, 0.788235, 0.627451, 1)
shadow_size = 12
shadow_offset = Vector2(6, 6)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ju3c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eo3sk")
metadata/_edit_lock_ = true

[node name="Logo" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = 87.0
offset_right = -980.0
offset_bottom = -427.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_aqiha")
expand_mode = 2

[node name="Tittle 1" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_right = 1.035
anchor_bottom = 0.205
offset_left = -0.0800171
offset_top = -10.0
offset_right = 0.199951
offset_bottom = 31.4
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.831373, 0.898039, 0.941176, 1)
theme_override_colors/font_shadow_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.247059, 0.290196, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_c4irr")
theme_override_font_sizes/font_size = 75
text = "HOWLING HEROS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sub tittle" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 419.0
offset_top = 126.0
offset_right = -118.0
offset_bottom = -535.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.831373, 0.898039, 0.941176, 1)
theme_override_colors/font_shadow_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.247059, 0.290196, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_c4irr")
theme_override_font_sizes/font_size = 43
text = "THE GREAT WOLF RESCUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="New Game Button" type="Button" parent="Background"]
layout_direction = 1
layout_mode = 2
anchor_left = 0.594
anchor_top = 0.292
anchor_right = 0.945
anchor_bottom = 0.382
offset_left = -0.320068
offset_top = -0.240021
offset_right = 0.399902
offset_bottom = -0.0400085
theme = SubResource("Theme_oaio5")
theme_override_fonts/font = ExtResource("5_vrfc0")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7vasw")
text = "New Game"

[node name="Credits" type="Button" parent="Background"]
layout_direction = 1
layout_mode = 2
anchor_left = 0.593
anchor_top = 0.674
anchor_right = 0.945
anchor_bottom = 0.764
offset_left = -0.0400391
offset_top = -0.280029
offset_right = -0.600098
offset_bottom = -0.0800171
theme = SubResource("Theme_oaio5")
theme_override_fonts/font = ExtResource("5_vrfc0")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7vasw")
text = "Credits"

[node name="Continue Button" type="Button" parent="Background"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.417
anchor_right = 0.945
anchor_bottom = 0.507
offset_left = -0.320068
offset_top = -0.240021
offset_right = 0.399902
offset_bottom = -0.0400085
theme = SubResource("Theme_oaio5")
theme_override_fonts/font = ExtResource("5_vrfc0")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7vasw")
action_mode = 0
text = "Continue
"

[node name="Option Button" type="Button" parent="Background"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.542
anchor_right = 0.945
anchor_bottom = 0.632
offset_left = -0.320068
offset_top = -0.240051
offset_right = 0.399902
offset_bottom = -0.0400085
theme = SubResource("Theme_oaio5")
theme_override_fonts/font = ExtResource("5_vrfc0")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7vasw")
text = "Options"

[node name="Quit Button" type="Button" parent="Background"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.591
anchor_top = 0.799
anchor_right = 0.943
anchor_bottom = 0.889
offset_left = 0.519958
offset_top = -0.280029
offset_right = -0.0400391
offset_bottom = -0.0800171
theme = SubResource("Theme_oaio5")
theme_override_fonts/font = ExtResource("5_vrfc0")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7vasw")
text = "Quit"

[node name="StartBtn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5ule3")
bus = &"Sound Effects"

[node name="Normal_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_15ajo")
bus = &"Sound Effects"

[node name="Back_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_h2jsk")
bus = &"Sound Effects"

[node name="Label_Version" type="Label" parent="."]
layout_mode = 0
offset_left = 1206.0
offset_top = 681.0
offset_right = 1267.0
offset_bottom = 713.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("9_b4xqu")
theme_override_font_sizes/font_size = 32
text = "V 1.0"

[node name="Discord" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_left = 1144.0
offset_top = 656.0
offset_right = 1208.0
offset_bottom = 720.0
icon = ExtResource("10_wohku")
flat = true
expand_icon = true

[node name="Github" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
anchor_right = 0.885
anchor_bottom = 1.0
offset_left = 1069.0
offset_top = 656.0
offset_right = 0.199951
icon = ExtResource("11_d0eax")
flat = true
expand_icon = true

[node name="Furafinity" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_left = 994.0
offset_top = 656.0
offset_right = 1058.0
offset_bottom = 720.0
icon = ExtResource("12_qpg2x")
flat = true
expand_icon = true

[connection signal="pressed" from="Background/New Game Button" to="." method="_on_new_game_main_menu_buttons_pressed"]
[connection signal="pressed" from="Background/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Background/Continue Button" to="." method="_on_continue_main_menu_buttons_pressed"]
[connection signal="pressed" from="Background/Option Button" to="." method="_on_options_main_menu_buttons_pressed"]
[connection signal="pressed" from="Background/Quit Button" to="." method="_on_quit_main_menu_buttons_pressed"]
[connection signal="pressed" from="Discord" to="." method="_on_discord_pressed"]
[connection signal="pressed" from="Github" to="." method="_on_github_pressed"]
[connection signal="pressed" from="Furafinity" to="." method="_on_furafinity_pressed"]
